# requirements-resolver

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build-release.yml  ci.yml
docs/: README.md
example/: requirements2.txt
src/requirements_resolver/: backend.py  main.py  ui.py
tests/: test_requirements_resolver.py
